--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,11 +1,17 @@
-/* AppComponent's private CSS styles */
 h1 {
-  margin-bottom: 0;
+  text-align:center;
 }
+
+nav {
+  margin: 0 auto;
+  text-align: center;
+}
+
 nav a {
   padding: 1rem;
   text-decoration: none;
   margin-top: 10px;
+  margin-left: 10px;
   display: inline-block;
   background-color: #e8e8e8;
   color: #3d3d3d;
@@ -18,4 +24,14 @@ nav a:hover {
 }
 nav a.active {
   background-color: black;
+}
+
+.card {
+  padding: 1rem;
+  width: 100%;
+}
+
+.container {
+  padding: 1rem;
+  margin: 0 auto;
 }
