--- a/src/app/hero-search/hero-search.component.html
+++ b/src/app/hero-search/hero-search.component.html
@@ -1,7 +1,6 @@
-<div id="search-component">
+<div class="container" id="search-component">
     <label for="search-box">Hero Search</label>
     <input #searchBox id="search-box" (input)="search(searchBox.value)" />
-
     <ul class="search-result">
         <li *ngFor="let hero of heroes$ | async">
             <a routerLink="/detail/{{hero.id}}">
