--- a/src/app/heroes/heroes.component.css
+++ b/src/app/heroes/heroes.component.css
@@ -1,4 +1,7 @@
-/* HeroesComponent's private CSS styles */
+h2 {
+  text-align:center;
+}
+
 .heroes {
   margin: 0 0 2em 0;
   list-style-type: none;
@@ -29,7 +32,7 @@ input {
   background-color: #EEE;
   margin: .5em;
   padding: .3em 0;
-  height: 1.6em;
+  height: 2em;
   border-radius: 4px;
   display: block;
   width: 100%;
@@ -55,7 +58,7 @@ input {
   position: relative;
   left: -1px;
   top: -4px;
-  height: 1.8em;
+  height: 2.4em;
   min-width: 16px;
   text-align: right;
   margin-right: .8em;
@@ -75,12 +78,14 @@ input {
 
 button.delete {
   position: absolute;
-  left: 210px;
-  top: 5px;
+  left: 225px;
+  top: 4px;
   background-color: white;
   color:  #525252;
-  font-size: 1.1rem;
-  padding: 1px 10px 3px 10px;
+  font-size: 1rem;
+  padding: 0px 5px 0px 5px;
+  height: 1.5rem;
+  text-align:center;
 }
 
 button.delete:hover {
