--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -3,8 +3,6 @@
 <div>
   <label for="new-hero">Hero name: </label>
   <input id="new-hero" #heroName />
-
-  <!-- (click) passes input value to add() and then clears the input -->
   <button class="add-button" (click)="add(heroName.value); heroName.value=''">
     Add hero
   </button>
@@ -15,7 +13,6 @@
     <a routerLink="/detail/{{hero.id}}">
       <span class="badge">{{hero.id}}</span> {{hero.name}}
     </a>
-    <button class="delete" title="delete hero"
-      (click)="delete(hero)">x</button>
+    <button class="delete" title="delete hero" (click)="delete(hero)">x</button>
   </li>
 </ul>
