--- a/src/app/hero-detail/hero-detail.component.css
+++ b/src/app/hero-detail/hero-detail.component.css
@@ -8,8 +8,8 @@ label {
   }
   button {
     margin-top: 20px;
-    background-color: #eee;
-    padding: 1rem;
+    margin-right: 3px;
+    padding: 0.5rem;
     border-radius: 4px;
     font-size: 1rem;
   }
