--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -3,8 +3,8 @@
   <div><span>id: </span>{{hero.id}}</div>
   <div>
     <label for="hero-name">Hero name: </label>
-    <input id="hero-name" [(ngModel)]="hero.name" placeholder="Hero name" />
+    <input pInputText id="hero-name" [(ngModel)]="hero.name" placeholder="Hero name" />
   </div>
-  <button (click)="goBack()">go back</button>
-  <button (click)="save()">save</button>
+  <button pButton (click)="save()">save</button>
+  <button pButton (click)="goBack()">go back</button>
 </div>
