--- a/src/app/hero-search/hero-search.component.html
+++ b/src/app/hero-search/hero-search.component.html
@@ -1,6 +1,6 @@
 <div class="container" id="search-component">
     <label for="search-box">Hero Search</label>
-    <input #searchBox id="search-box" (input)="search(searchBox.value)" />
+    <input #searchBox id="search-box" pInputText (input)="search(searchBox.value)" />
     <ul class="search-result">
         <li *ngFor="let hero of heroes$ | async">
             <a routerLink="/detail/{{hero.id}}">
