--- a/src/app/heroes/heroes.component.css
+++ b/src/app/heroes/heroes.component.css
@@ -14,7 +14,7 @@ input {
   display: block;
   width: 100%;
   padding: .5rem;
-  margin: 1rem 0;
+  margin-bottom: 1rem;
   box-sizing: border-box;
 }
 
@@ -53,12 +53,12 @@ input {
   display: inline-block;
   font-size: small;
   color: white;
-  padding: 0.8em 0.7em 0 0.7em;
+  padding: 5px 10px 5px 10px;
   background-color:#405061;
   line-height: 1em;
   position: relative;
   left: -1px;
-  top: -4px;
+  top: -6px;
   height: 2.4em;
   min-width: 16px;
   text-align: right;
@@ -79,13 +79,12 @@ input {
 
 button.delete {
   position: absolute;
-  left: 225px;
-  top: 4px;
+  left: 220px;
+  top: 3px;
   background-color: white;
   color:  #525252;
   font-size: 1rem;
-  padding: 0px 5px 0px 5px;
-  height: 1.5rem;
+  padding: 0px 7px 0px 7px;
   text-align:center;
 }
 
