--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -2,8 +2,8 @@
 
 <div>
   <label for="new-hero">Hero name: </label>
-  <input id="new-hero" #heroName />
-  <button class="add-button" (click)="add(heroName.value); heroName.value=''">
+  <input pInputText id="new-hero" #heroName />
+  <button pButton class="add-button" (click)="add(heroName.value); heroName.value=''">
     Add hero
   </button>
 </div>
@@ -13,6 +13,6 @@
     <a routerLink="/detail/{{hero.id}}">
       <span class="badge">{{hero.id}}</span> {{hero.name}}
     </a>
-    <button class="delete" title="delete hero" (click)="delete(hero)">x</button>
+    <button pButton class="delete" title="delete hero" (click)="delete(hero)">x</button>
   </li>
 </ul>
