--- a/src/app/messages/messages.component.css
+++ b/src/app/messages/messages.component.css
@@ -2,13 +2,14 @@ h2 {
     color: #A80000;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: lighter;
+    padding-top: 0.5rem;
   }
   
   .clear {
     color: #333;
     background-color: #eee;
     margin-bottom: 12px;
-    padding: 1rem;
+    padding: 0.5rem;
     border-radius: 4px;
     font-size: 1rem;
   }
