--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -1,7 +1,5 @@
 <div *ngIf="messageService.messages.length">
-
         <h2>Messages</h2>
-        <button class="clear" (click)="messageService.clear()">Clear messages</button>
+        <button pButton class="p-button-raised p-button-rounded" (click)="messageService.clear()">Clear messages</button>
         <div *ngFor='let message of messageService.messages'> {{message}} </div>
-
 </div>
