--- a/src/app/hero-search/hero-search.component.css
+++ b/src/app/hero-search/hero-search.component.css
@@ -4,11 +4,13 @@ label {
     font-size: 1.2rem;
     margin-top: 1rem;
     margin-bottom: .5rem;
+    margin-left: 1rem;
   
   }
   input {
-    padding: .5rem;
-    width: 100%;
+    margin-left: 1rem;
+    padding: rem;
+    width: 95%;
     max-width: 600px;
     box-sizing: border-box;
     display: block;
