--- a/src/app/hero-detail/hero-detail.component.css
+++ b/src/app/hero-detail/hero-detail.component.css
@@ -1,4 +1,5 @@
 label {
+    margin-left: .5rem;
     color: #435960;
     font-weight: bold;
   }
@@ -7,8 +8,9 @@ label {
     padding: .5rem;
   }
   button {
-    margin-top: 20px;
-    margin-right: 3px;
+    margin-top: 20px;   
+    margin-left: .5rem;
+    margin-bottom: .5rem;
     padding: 0.5rem;
     border-radius: 4px;
     font-size: 1rem;
@@ -20,4 +22,12 @@ label {
     background-color: #eee;
     color: #ccc;
     cursor: auto;
+  }
+
+  h2 {
+   margin-left: .5rem;
+  }
+
+  span{
+    margin-left: .5rem;
   }
