--- a/src/app/hero-search/hero-search.component.html
+++ b/src/app/hero-search/hero-search.component.html
@@ -1,4 +1,4 @@
-<div class="container" id="search-component">
+<div class="ui card" id="search-component">
     <label for="search-box">Hero Search</label>
     <input #searchBox id="search-box" pInputText (input)="search(searchBox.value)" />
     <ul class="search-result">
