--- a/src/app/heroes/heroes.component.css
+++ b/src/app/heroes/heroes.component.css
@@ -12,9 +12,10 @@ h2 {
 
 input {
   display: block;
-  width: 100%;
+  width: 95%;
   padding: .5rem;
   margin-bottom: 1rem;
+  margin-left: .5rem;
   box-sizing: border-box;
 }
 
@@ -70,6 +71,7 @@ input {
  padding: .5rem 1.5rem;
  font-size: 1rem;
  margin-bottom: 2rem;
+ margin-left: .5rem;
 }
 
 .add-button:hover {
@@ -91,4 +93,8 @@ button.delete {
 button.delete:hover {
   background-color: #525252;
   color: white;
+}
+
+label {
+  margin-left: .5rem;
 }
