--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -1,5 +1,8 @@
-<div *ngIf="messageService.messages.length">
-        <h2>Messages</h2>
-        <button pButton class="p-button-raised p-button-rounded" (click)="messageService.clear()">Clear messages</button>
-        <div *ngFor='let message of messageService.messages'> {{message}} </div>
+<div class="ui card">
+        <div class="container" *ngIf="messageService.messages.length">
+                <h2>Messages</h2>
+                <button pButton class="p-button-raised p-button-rounded" (click)="messageService.clear()">Clear
+                        messages</button>
+                <div *ngFor='let message of messageService.messages'> {{message}} </div>
+        </div>
 </div>
